[gd_scene load_steps=2 format=3 uid="uid://d3k8nav2x7nqr"]

[ext_resource type="Script" uid="uid://d1wmusjghhqop" path="res://algorithms/computationalgeometry/closest_pair/ClosestPair.gd" id="1_closest_pair"]

[node name="ClosestPair" type="Node3D"]
script = ExtResource("1_closest_pair")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 12)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5
shadow_enabled = true

[node name="Points" type="Node3D" parent="."]

[node name="DistanceLines" type="Node3D" parent="."]

[node name="DivisionLine" type="CSGBox3D" parent="."]
size = Vector3(0.2, 12, 0.2)

[node name="ClosestPairLine" type="CSGCylinder3D" parent="."]
radius = 0.15
height = 1.0

[node name="CoordinateGrid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="CoordinateGrid"]

[node name="AlgorithmStepIndicator" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -4, 0)
size = Vector3(0.5, 1, 0.2)

[node name="ComplexityIndicator" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -4, 0)
size = Vector3(0.5, 1, 0.2)
